force-app/main/default/objects/Runo_Call_Completed__e/Runo_Call_Completed__e.object-meta.xml
<CustomObject>
    <label>Runo Call Completed</label>
    <pluralLabel>Runo Call Completed</pluralLabel>
</CustomObject>