force-app/main/default/objects/Runo_Call_Completed__e/fields/Call_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_Id__c</fullName>
    <label>Call Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>