force-app/main/default/objects/Runo_Call_Completed__e/fields/Candidate_Id__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Id__c</fullName>
    <label>Candidate Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>